Fix header spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,6 +40,7 @@ html {
   align-items: center;
   min-height: 100vh;
   width: 100vw;
+  padding: 2rem;
   font-family: 'Rubik', sans-serif;
 }
 
@@ -83,13 +84,14 @@ body {
 
 /* Header nav links */
 header {
-  padding: 2rem 1rem;
+  display: flex;
+  padding: 0 1rem;
   padding-bottom: 0rem;
+
 }
 
 nav {
   display: flex;
-  z-index: 10;
   gap: 1rem;
   color: var(--text-color);
 }
